Got srefs working, Time to make nav bar work properly

--- a/www/views/homeTmpl.html
+++ b/www/views/homeTmpl.html
@@ -1,4 +1,14 @@
 <section>
   <nav-bar><nav-bar>
 </section>
+<input  ng-model="user">
+<button type="button" name="button" ng-click="getUsers(user)">Find</button>
+
+  <div ng-repeat="user in users">
+
+</div>
+
+
+
+
 This is home HTML
