--- a/www/views/navBar.html
+++ b/www/views/navBar.html
@@ -1,7 +1,12 @@
-<div class="nav">
-  <ul>
-    <li><a ui-sref="wod">WOD</a></li>
-    <li><a ui-sref="home">Home</a></li>
-    <li><a ui-sref="user">Profile</a></li>
-  </ul>
-</div>
+
+<body ng-controller="navCtrl">
+  <div class="nav">
+    <ul>
+      <li ng-show="true" ng-click="showAll()"><a ><img src="./img/hamburger.png"/></a></li>
+      <li ng-hide="true"><a ui-sref="wod">WOD</a></li>
+      <li ng-hide="true"><a ui-sref="home">Home</a></li>
+      <li ng-hide="true"> <a ui-sref="user">Profile</a></li>
+    </ul>
+  </div>
+
+</body>
