--- a/www/views/wodTmpl.html
+++ b/www/views/wodTmpl.html
@@ -2,9 +2,9 @@
   <nav-bar><nav-bar>
 </section>
 <ul>
-  <!-- <section ng-repeat="wod in getWods">
-      {{wod.data}}
-  </section> -->
-  {{getWods}}
+  <section ng-repeat="wod in getWods">
+      {{wod}}
+  </section>
+
 </ul>
 This is Wod HTML
