--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,13 @@
+.nav img{
+  height: 30px;
+  width: 50px;
+  list-style: none;
+  background-color: transparent;;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+
 .nav ul {
   list-style: none;
   background-color:#aba;
