--- a/www/views/userTmpl.html
+++ b/www/views/userTmpl.html
@@ -2,9 +2,9 @@
   <nav-bar><nav-bar>
 </section>
 
-<input ng-model="user.name">
+<input ng-model="user.username">
 
-<input ng-model="user.email">
+<input ng-model="user.password">
 
 <button type="button" name="button" ng-click="addNewUser(user)">Add</button>
 
