--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,9 +1,9 @@
 .nav img{
-  height: 30px;
-  width: 50px;
+  height: 36px;
+  width: 57px;
   list-style: none;
   background-color: transparent;;
-  text-align: center;
+  float: right;
   padding: 0;
   margin: 0;
 }
@@ -53,4 +53,8 @@
   .nav li {
     display: inline-block;
     margin-right: -4px;
+  }
+
+  .homewods{
+    font-weight: 400;
   }
