--- a/www/views/navBar.html
+++ b/www/views/navBar.html
@@ -2,7 +2,7 @@
 <body ng-controller="navCtrl">
   <div class="nav">
     <ul>
-      <li ng-click="goNav = !goNav" ng-click="showAll()"><a><img src="./img/hamburger.png"/> <span class="boxwod">BOXWOD</span> </a> </li>
+      <li ng-click="goNav = !goNav" ng-click="showAll()"><a>  BOXWOD </a><img src="./img/hamburger.png"/></li>
       <li ng-show="goNav"><a ui-sref="wod">WOD</a></li>
       <li ng-show="goNav"><a ui-sref="home">Home</a></li>
       <li ng-show="goNav"> <a ui-sref="user">Profile</a></li>
