--- a/www/views/wodTmpl.html
+++ b/www/views/wodTmpl.html
@@ -1,21 +1,39 @@
 <section>
-  <nav-bar><nav-bar>
+  <nav-bar>
+    <nav-bar>
 </section>
 
-<ul class="homewods" ng-repeat="wod in getWods">
+<ion-list show-delete="shouldShowDelete" show-reorder="shouldShowReorder" can-swipe="listCanSwipe">
+  <ion-scroll style="height: 100vh;">
 
-      <div class="homewods">
-        {{wod.name}} <br> {{wod.description}}
-      </div>
-        <br>
-</ul>
-
-      <input placeholder="wod name" ng-model="wod.name">
-
-      <input placeholder="about" ng-model="wod.description">
-
-      <button type="button" name="button" ng-click="addWod(wod)">Add</button>
+  <ion-item ng-repeat="wod in getWods" class="item-thumbnail-left" <img ng-src="{{item.img}}">
+  <div>
+    <h2>{{wod.date | date: 'MMM/ d/ y'}}</h2>
+    <h2>{{wod.name}}</h2>
+  </div>
 
 
+    <ion-option-button class="button-positive" ng-click="byeWod(item)">
+      Remove
+    </ion-option-button>
+    <ion-option-button class="button-info" ng-click="editWods(item)">
+      Edit
+    <!-- </ion-option-button>
+    <ion-delete-button class="ion-minus-circled" ng-click="getWods.splice($index, 1)">
+    </ion-delete-button>
+    <ion-reorder-button class="ion-navicon" on-reorder="reorderItem(item, $fromIndex, $toIndex)">
+    </ion-reorder-button> -->
 
-This is Wod HTML
+  </ion-item>
+</ion-scroll>
+
+</ion-list>
+
+
+<div class="bar bar-footer" >
+  <input placeholder="wod name" ng-model="wod.name">
+
+  <input placeholder="about" ng-model="wod.description">
+
+  <button type="button" name="button" ng-click="addWod(wod)">Add</button>
+</div>
