--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,13 +1,13 @@
-.nav img{
-  height: 36px;
-  width: 57px;
-  list-style: none;
-  background-color: transparent;;
-  float: right;
-  padding: 0;
-  margin: 0;
-}
 
+.nav img{
+  height: 61px;
+  width: 74px;
+  /*list-style: none;*/
+  background-color: transparent;
+  float: right;
+  position: right relative;
+
+}
 .nav ul {
   list-style: none;
   background-color:#aba;
@@ -16,10 +16,13 @@
   margin: 0;
 }
 .nav li {
+  display: flex;
+  justify-content: center;;
+  align-items: center;
   font-family: 'Oswald', sans-serif;
-  font-size: 1.2em;
+  font-size: 2.7em;
   line-height: 40px;
-  height: 40px;
+  height: 70px;
   border-bottom: 1px solid #888;
 }
 
@@ -27,11 +30,17 @@
   text-decoration: none;
   color: #fff;
   display: block;
-  transition: .3s background-color;
+  width: 100%;
+  /*transition: .2s background-color;*/
 }
 
 .nav a:hover {
   background-color: #6EBBC9;
+  height: 69px;
+  display: flex;
+  justify-content: center;;
+  align-items: center;
+
 }
 
 .nav a.active {
@@ -55,6 +64,15 @@
     margin-right: -4px;
   }
 
-  .homewods{
-    font-weight: 400;
+
+
+  .foot {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    width:100%;
+    height:60px;
+    background-color:#6cf;
+
   }
