Add wod Admin almost finished

--- a/www/views/loginTmpl.html
+++ b/www/views/loginTmpl.html
@@ -6,15 +6,15 @@
 </section>
 
 <div class="list">
-  <label class="item item-input">
+  <label class="item item-input item-floating-label">
     <span class="input-label">Username</span>
-    <input type="text">
+    <input type="text" placeholder="username">
   </label>
-  <label class="item item-input">
+  <label class="item item-input item-floating-label">
     <span class="input-label">Password</span>
-    <input type="password">
+    <input type="password" placeholder="Password">
   </label>
-</div>
+
 <br>
 <button class="button button-block button-calm">
   Sign In
