--- a/www/views/signUpTmpl.html
+++ b/www/views/signUpTmpl.html
@@ -5,23 +5,23 @@
 </section>
 
 <div class="list">
-  <label class="item item-input item-stacked-label">
-    <span class="input-label">Full Name</span>
-    <input type="text" placeholder="John Smith">
+  <label class="item item-input item-floating-label">
+    <span class="input-label">Name</span>
+    <input type="text" placeholder="Name">
   </label>
-  <label class="item item-input item-stacked-label">
-    <span class="input-label">User Name</span>
-    <input type="text" placeholder="Dr.Bro">
+  <label class="item item-input item-floating-label">
+    <span class="input-label">Username</span>
+    <input type="text" placeholder="Username">
   </label>
-  <label class="item item-input item-stacked-label">
+  <label class="item item-input item-floating-label">
     <span class="input-label">Password</span>
-    <input type="text" placeholder="password">
+    <input type="password" placeholder="Password">
   </label>
-  <label class="item item-input item-stacked-label">
+  <label class="item item-input item-floating-label">
     <span class="input-label">Email</span>
-    <input type="text" placeholder="john@suhr.com">
+    <input type="text" placeholder="@Email">
   </label>
-
+</div>
 <button class="button button-block button-calm">
-  Sign In
+  Sign Up
 </button>
