--- a/www/views/loginTmpl.html
+++ b/www/views/loginTmpl.html
@@ -14,15 +14,17 @@
     <span class="input-label">Password</span>
     <input type="password" placeholder="Password">
   </label>
+</div>
 
-<br>
+
 <button class="button button-block button-calm">
   Sign In
 </button>
-<br>
-<p>
-  <a ui-sref="signUp"> Not a User? Sign up </a>
-</p>
+<button ui-sref="signUp" class="button button-block button-positive">
+  Sign Up
+</button>
+
+
 
 <!-- <button class="button button-outline button-positive">
   Sign Up
