--- a/www/views/signUpTmpl.html
+++ b/www/views/signUpTmpl.html
@@ -22,6 +22,10 @@
     <input type="text" placeholder="@Email">
   </label>
 </div>
-<button class="button button-block button-calm">
-  Sign Up
-</button>
+
+
+
+
+    <button ui-sref="wod" class="button button-block button-positive">
+      Sign Up
+    </button>
