got alot done, wod admin is just about finished

--- a/www/views/addWod.html
+++ b/www/views/addWod.html
@@ -19,6 +19,6 @@
     </textarea>
   </label>
 </div>
-<button class="button button-block button-calm" ng-click="addWod(wod); showAlert()">
+<button ui-sref="wod" class="button button-block button-calm" ng-click="addWod(wod); showAlert(); closeModal()">
   ADD WOD
 </button>
