--- a/www/views/homeTmpl.html
+++ b/www/views/homeTmpl.html
@@ -1,10 +1,33 @@
 <section>
   <nav-bar><nav-bar>
 </section>
-<input placeholder="search" ng-model="search">
-<!-- <button type="button" name="button" ng-click="getUsers(user)">Find</button> -->
-  <ul ng-repeat="user in users | filter:search">
 
-      {{user.username}}
+<div class="list card">
 
-</ul>
+  <div class="item item-avatar">
+    <img src="mcfly.jpg">
+    <h2>Marty McFly</h2>
+    <p>November 05, 1955</p>
+  </div>
+
+  <div class="item item-body">
+    <img class="full-image" src="delorean.jpg">
+    <input placeholder="search" ng-model="search">
+    <!-- <button type="button" name="button" ng-click="getUsers(user)">Find</button> -->
+      <ul ng-repeat="user in users | filter:search">
+
+          {{user.username}}
+
+    </ul>
+    <p>
+      This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
+      the content is from a card-body consisting of an image and paragraph text. The footer
+      consists of tabs, icons aligned left, within the card-footer.
+    </p>
+    <p>
+      <a href="#" class="subdued">1 Like</a>
+      <a href="#" class="subdued">5 Comments</a>
+    </p>
+  </div>
+
+</div>
