--- a/www/views/editModal.html
+++ b/www/views/editModal.html
@@ -3,28 +3,28 @@
   <div class="bar bar-header bar-energized">
     <div class="title">Editing Mode</div>
   </div>
+
   <br>
-  <h1>{{wod.name}} - {{wod.date | date: 'MMM/ d/ y'}}</h1>
+  <h1>{{wod.name}} - {{wod.date | date: 'MMM /d /y'}}</h1>
   <div class="list">
   <label class="item item-input item-stacked-label">
-    <span class="input-label">edit name</span>
-    <input type="text" placeholder="{{wod.name}}">
+    <span class="input-label">wod name</span>
+    <input ng-model="wod.name" type="text" placeholder="{{wod.name}}">
   </label>
   <label class="item item-input item-stacked-label">
-    <span class="input-label">edit date</span>
-    <input type="text" placeholder="{{wod.date | date: 'MMM/ d/ y'}}">
+    <span class="input-label">edit </span>
+    <input ng-model="wod.date" type="text" placeholder="{{wod.date | date: 'MMM /d /y'}}">
   </label>
   <label class="item item-text-area item-stacked-label">
     <span class="input-label">edit description</span>
-    <textarea rows='4' cols='50' style="background-color: transparent" type="text" placeholder="{{wod.description}}">
-    </textarea>
+    <textarea ng-model="wod.description" rows='4' cols='50' style="background-color: transparent" type="text" placeholder="{{wod.description}}"></textarea>
   </label>
 </div>
 
-<button ui-sref="wod" class="button button-block button-positive">
+<button ng-click="updateWod(wod); showAlert(); closeModal() "  class="button button-block button-positive">
   edit wod
 </button>
-<button ui-sref="wod" class="button button-block button-positive">
+<button ng-click="closeModal()" class="button button-block button-positive">
   cancel
 </button>
 </ion-modal-view>
