--- a/www/views/editModal.html
+++ b/www/views/editModal.html
@@ -1,4 +1,3 @@
-
 <ion-modal-view>
   <div class="bar bar-header bar-energized">
     <div class="title">Editing Mode</div>
@@ -7,24 +6,28 @@
   <br>
   <h1>{{wod.name}} - {{wod.date | date: 'MMM /d /y'}}</h1>
   <div class="list">
-  <label class="item item-input item-stacked-label">
-    <span class="input-label">wod name</span>
-    <input ng-model="wod.name" type="text" placeholder="{{wod.name}}">
-  </label>
-  <label class="item item-input item-stacked-label">
-    <span class="input-label">edit </span>
-    <input ng-model="wod.date" type="text" placeholder="{{wod.date | date: 'MMM /d /y'}}">
-  </label>
-  <label class="item item-text-area item-stacked-label">
-    <span class="input-label">edit description</span>
-    <textarea ng-model="wod.description" rows='4' cols='50' style="background-color: transparent" type="text" placeholder="{{wod.description}}"></textarea>
-  </label>
-</div>
+    <label class="item item-input item-stacked-label">
+      <span class="input-label">wod name</span>
+      <input ng-model="wod.name" type="text" placeholder="{{wod.name}}">
+    </label>
+    <label class="item item-input">
+      <span class="input-label">Date</span>
+      <input type="date" ng-model="wod.date">
+    </label>
+    <!-- <label class="item item-input item-stacked-label">
+      <span class="input-label">edit date</span>
+      <input ng-model="wod.date" type="text" placeholder="{{wod.date | date: 'MMM /d /y'}}">
+    </label> -->
+    <label class="item item-text-area item-stacked-label">
+      <span class="input-label">edit description</span>
+      <textarea ng-model="wod.description" rows='4' cols='50' style="background-color: transparent" type="text" placeholder="{{wod.description}}"></textarea>
+    </label>
+  </div>
 
-<button ng-click="updateWod(wod); showAlert(); closeModal() "  class="button button-block button-positive">
-  edit wod
-</button>
-<button ng-click="closeModal()" class="button button-block button-positive">
-  cancel
-</button>
+  <button ng-click="updateWod(wod); showAlert(); closeModal() " class="button button-block button-positive">
+    edit wod
+  </button>
+  <button ng-click="closeModal()" class="button button-block button-positive">
+    cancel
+  </button>
 </ion-modal-view>
