--- a/www/views/wodTmpl.html
+++ b/www/views/wodTmpl.html
@@ -1,27 +1,34 @@
+
+
 <section>
   <nav-bar>
     <nav-bar>
 </section>
 
-<ion-list show-delete="shouldShowDelete" show-reorder="shouldShowReorder" can-swipe="listCanSwipe">
-  <ion-scroll style="height: 100vh;">
 
-  <ion-item ng-repeat="wod in allWods | orderBy:'-date'" class="item-thumbnail-left" <img ng-src="{{item.img}}">
+
+<ion-list show-delete="shouldShowDelete" show-reorder="shouldShowReorder" can-swipe="listCanSwipe">
+  <ion-scroll>
+
+  <ion-item ng-repeat="wod in allWods | orderBy:'-date'" class="item-thumbnail-left">
+    <!-- <img ng-src="{{item.img}}"> -->
   <div>
-    <h2>{{wod.date | date: 'MMM/ d/ y'}}</h2>
-    <h1>{{wod.name}}</h1>
+    <h1 class="title">{{wod.date | date: 'MMM/ d/ y'}}</h1>
+    <h1 class="title">{{wod.name}}</h1>
   </div>
 
 
-    <ion-option-button class="button-positive" ng-model="selected" ng-click="removeWod(wod._id)">
+    <ion-option-button class="button-positive" ng-model="selected" ng-click="removeWod(wod._id); removeAlert(wod.name)">
       Remove
     </ion-option-button>
     <ion-option-button class="button-info" ng-click="editWod(wod._id); openModal(wod)">
       Edit
+    </ion-option-button>
 
   </ion-item>
 </ion-scroll>
 </ion-list>
+
 
 
 <section ng-click="showFooter()">
@@ -29,6 +36,7 @@
     <div class="title"><a> ADD + <a/></div>
   </div>
 </section>
+
 
 
 
