--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,6 @@
-
+#nav {
+  position: static;
+}
 .nav img{
   height: 61px;
   width: 74px;
@@ -14,6 +16,7 @@
   text-align: center;
   padding: 0;
   margin: 0;
+
 }
 .nav li {
   display: flex;
