Got auth working for sign up, n=but cant signIn yet

--- a/www/views/signUpTmpl.html
+++ b/www/views/signUpTmpl.html
@@ -7,25 +7,25 @@
 <div class="list">
   <label class="item item-input item-floating-label">
     <span class="input-label">Name</span>
-    <input type="text" placeholder="Name">
+    <input type="text" ng-model="newUser.name"placeholder="Name">
   </label>
   <label class="item item-input item-floating-label">
     <span class="input-label">Username</span>
-    <input type="text" placeholder="Username">
+    <input type="text" ng-model="newUser.username"placeholder="Username">
   </label>
   <label class="item item-input item-floating-label">
     <span class="input-label">Password</span>
-    <input type="password" placeholder="Password">
+    <input ng-model="newUser.password" type="password" placeholder="Password">
   </label>
   <label class="item item-input item-floating-label">
     <span class="input-label">Email</span>
-    <input type="text" placeholder="@Email">
+    <input type="text" ng-model="newUser.email"placeholder="@Email">
   </label>
 </div>
 
 
 
 
-    <button ui-sref="wod" class="button button-block button-positive">
+    <button ng-click="signUp(newUser)" class="button button-block button-positive">
       Sign Up
     </button>
