--- a/www/views/addWod.html
+++ b/www/views/addWod.html
@@ -23,7 +23,7 @@
     <span class="input-label">RX</span>
     <textarea ng-model="wod.warmup" rows='4' cols='50' style="background-color: transparent" type="text" placeholder="Warm Up"></textarea>
   </label>  <label class="item item-input item-floating-label">
-      <span class="input-label">RX</span>
+      <span class="input-label">Comments</span>
       <textarea ng-model="wod.comments" rows='4' cols='50' style="background-color: transparent" type="text" placeholder="Comments"></textarea>
     </label>
 </div>
