--- a/www/views/loginTmpl.html
+++ b/www/views/loginTmpl.html
@@ -8,16 +8,16 @@
 <div class="list">
   <label class="item item-input item-floating-label">
     <span class="input-label">Username</span>
-    <input type="text" placeholder="username">
+    <input ng-model='user.username' type="text" placeholder="username">
   </label>
   <label class="item item-input item-floating-label">
     <span class="input-label">Password</span>
-    <input type="password" placeholder="Password">
+    <input ng-model='user.password' type="password" placeholder="Password">
   </label>
 </div>
 
 
-<button class="button button-block button-calm">
+<button ng-click="login(user)" class="button button-block button-calm">
   Sign In
 </button>
 <button ui-sref="signUp" class="button button-block button-positive">
