Got auth working, time to start working on what the admin can see, and what regular users can not, also for admin i need to go into DB and change hit admin status to true

--- a/www/views/settingsTmpl.html
+++ b/www/views/settingsTmpl.html
@@ -37,6 +37,6 @@
 
 </ul>
 
-<button ui-sref='login' class="button button-block button-assertive">
+<button ng-click='logOut()' class="button button-block button-assertive">
   Sign Out
 </button>
