--- a/www/views/userTmpl.html
+++ b/www/views/userTmpl.html
@@ -2,6 +2,7 @@
 <section>
   <nav-bar><nav-bar>
 </section>
+<h1>{{currentUser.username}}</h1>
 
 <div class="list">
   <label class="item item-input">
