--- a/www/views/wodTmpl.html
+++ b/www/views/wodTmpl.html
@@ -22,7 +22,7 @@
     <ion-option-button class="button-positive" ng-model="selected" ng-click="removeWod(wod._id); removeAlert(wod.name)">
       Remove
     </ion-option-button>
-    
+
     <ion-option-button class="button-info" ng-click="editWod(wod._id); openModal(wod)">
       Edit
     </ion-option-button>
@@ -33,7 +33,7 @@
 </ion-content>
 
 
-<section ng-click="showFooter()">
+<section ng-model='admin' ng-if='admin' ng-click="showFooter()">
   <div class="bar bar-footer bar-balanced" ui-sref="addWod">
     <div class="title"><a> ADD + <a/></div>
   </div>
