--- a/www/views/homeTmpl.html
+++ b/www/views/homeTmpl.html
@@ -23,11 +23,11 @@
 <img src="./img/lindsay.png">
 <h1 class="title">{{user.username}}</h1>
 
-  <h2 >{{user.password}}</h2>
+  <h2 >{{user.admin}}</h2>
 
 
 
-  <ion-option-button class="button-positive" ng-model="selected" ng-click="removeUser(user._id); showAlert()">
+  <ion-option-button class="button-positive" ng-model='admin' ng-if='admin'  ng-click="removeUser(user._id); showAlert()">
     Remove
   </ion-option-button>
 </ion-item>
