--- a/www/views/signUpTmpl.html
+++ b/www/views/signUpTmpl.html
@@ -19,13 +19,13 @@
   </label>
   <label class="item item-input item-floating-label">
     <span class="input-label">Email</span>
-    <input type="text" ng-model="newUser.email"placeholder="@Email">
+    <input type="email" ng-model="newUser.email"placeholder="@Email">
   </label>
 </div>
 
 
 
 
-    <button ng-click="signUp(newUser)" class="button button-block button-positive">
+    <button ng-click="signUp(newUser);" class="button button-block button-positive">
       Sign Up
     </button>
