Got modal working for every wod

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,10 +1,33 @@
+body{
+  background-color: #858e8f;
+  background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png");
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+
+}
+
+ion-content{
+  background-color: #9e9e9e;
+  background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png");
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+}
+.h2{
+  font-size: 30px;
+}
+.space{
+margin-top: 69px;
+}
+
 .list:last-child {
     margin-bottom: 46px;
 }
-#nav {
-  position: static;
+#navi {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
 }
-.nav img{
+.navi img{
   height: 61px;
   width: 74px;
   /*list-style: none;*/
@@ -13,7 +36,7 @@
   position: right relative;
 
 }
-.nav ul {
+.navi ul {
   list-style: none;
   background-color:#aba;
   text-align: center;
@@ -21,7 +44,7 @@
   margin: 0;
 
 }
-.nav li {
+.navi li {
   display: flex;
   justify-content: center;;
   align-items: center;
@@ -32,7 +55,7 @@
   border-bottom: 1px solid #888;
 }
 
-.nav a {
+.navi a {
   text-decoration: none;
   color: #fff;
   display: block;
@@ -40,7 +63,7 @@
   /*transition: .2s background-color;*/
 }
 
-.nav a:hover {
+.navi a:hover {
   background-color: #6EBBC9;
   height: 69px;
   display: flex;
@@ -49,14 +72,14 @@
 
 }
 
-.nav a.active {
+.navi a.active {
   background-color: #fff;
   color: #444;
   cursor: default;
 }
 
 @media screen and (min-width: 600px) {
-  .nav li {
+  .navi li {
     width: 120px;
     border-bottom: none;
     height: 50px;
@@ -65,7 +88,7 @@
   }
 
   /* Option 1 - Display Inline */
-  .nav li {
+  .navi li {
     display: inline-block;
     margin-right: -4px;
   }
