--- a/www/views/addWod.html
+++ b/www/views/addWod.html
@@ -1,8 +1,9 @@
+
 <section>
   <nav-bar>
   </nav-bar>
 </section>
-<div class="list">
+<div class="list space">
   <label class="item item-input">
     <span style="color: red" class="input-label">Date</span>
     <input type="date" ng-model="wod.date">
@@ -24,8 +25,8 @@
     <textarea ng-model="wod.warmup" rows='4' cols='50' style="background-color: transparent" type="text" placeholder="Warm Up"></textarea>
   </label>
   <label class="item item-input item-floating-label">
-    <span class="input-label">Comments</span>
-    <textarea ng-model="wod.comments" rows='4' cols='50' style="background-color: transparent" type="text" placeholder="Comments"></textarea>
+    <span class="input-label">Tips</span>
+    <textarea ng-model="wod.tips" rows='4' cols='50' style="background-color: transparent" type="text" placeholder="Comments"></textarea>
   </label>
 </div>
 <footer class="footer">
