--- a/www/views/editModal.html
+++ b/www/views/editModal.html
@@ -1,4 +1,4 @@
-<ion-modal-view>
+<ion-modal-view class="space">
   <div class="bar bar-header bar-energized">
     <div class="title">Editing Mode</div>
   </div>
