--- a/www/views/loginTmpl.html
+++ b/www/views/loginTmpl.html
@@ -1,11 +1,6 @@
 
 
-<section>
-  <nav-bar>
-    <nav-bar>
-</section>
-
-<div class="list">
+<div class="list space">
   <label class="item item-input item-floating-label">
     <span class="input-label">Username</span>
     <input ng-model='user.username' type="text" placeholder="username">
