--- a/www/views/userTmpl.html
+++ b/www/views/userTmpl.html
@@ -1,7 +1,8 @@
-<ion-content>
 <section>
   <nav-bar><nav-bar>
 </section>
+<ion-content class="space">
+
 <h1>{{currentUser.username}}</h1>
 
 <div class="list">
