Made nav more responsive, also added cards to wod page

--- a/www/views/addWod.html
+++ b/www/views/addWod.html
@@ -1,8 +1,9 @@
-
 <section>
-  <nav-bar>
-  </nav-bar>
+  <nav-bar><nav-bar>
 </section>
+
+  <ion-content >
+
 <div class="list space">
   <label class="item item-input">
     <span style="color: red" class="input-label">Date</span>
