--- a/www/views/editModal.html
+++ b/www/views/editModal.html
@@ -7,7 +7,7 @@
   <h1>{{wod.name}} - {{wod.date | date: 'MMM /d /y'}}</h1>
   <div class="list">
     <label class="item item-input item-stacked-label">
-      <span class="input-label">wod name</span>
+      <span class="input-label">Wod Name</span>
       <input ng-model="wod.name" type="text" placeholder="{{wod.name}}">
     </label>
     <label class="item item-input">
@@ -19,7 +19,7 @@
       <input ng-model="wod.date" type="text" placeholder="{{wod.date | date: 'MMM /d /y'}}">
     </label> -->
     <label class="item item-text-area item-stacked-label">
-      <span class="input-label">edit description</span>
+      <span class="input-label">Edit Description</span>
       <textarea ng-model="wod.description" rows='4' cols='50' style="background-color: transparent" type="text" placeholder="{{wod.description}}"></textarea>
     </label>
   </div>
