--- a/www/views/wodModal.html
+++ b/www/views/wodModal.html
@@ -1,5 +1,62 @@
+<section ng-click="closeModal()">
+  <nav-bar><nav-bar>
+</section>
+
+  <ion-content  ng-model='admin'>
+
 <ion-modal-view class="space">
-HErro
-{{wod}}
+
+<div class="list card">
+
+  <div class="item item-avatar">
+    <h1>{{wod.name}}</h1>
+    <p class="h2 subdued">{{wod.date | date: 'EEEE'}} - {{wod.date | date: 'MMM/ d/ y'}}</p>
+  </div>
+
+  <div class="item item-body">
+    <p>
+      <h2 class="h2 subdued">Description</h2>
+
+      {{wod.description}}
+    </p>
+    <p class="item">
+      <h2 class="h2 subdued">RX</h2>
+
+      {{wod.rx}}
+    </p>
+    <p class="item">
+      <h2 class="h2 subdued">Tip</h2>
+
+      {{wod.tip}}
+    </p>
+    <p>
+      <a href="#" class="subdued">1 Like</a>
+      <a href="#" class="subdued">5 Comments</a>
+    </p>
+  </div>
+
+</div>
+
+{{wod.name}}
+{{wod.description}}
+<h2 class="title h2">{{wod.date | date: 'EEEE'}} - {{wod.date | date: 'MMM/ d/ y'}}</h2>{{wod.rx}}
+{{wod.tip}}
+
+<div ng-hide='custom'>
+  <textarea placeholder='add comment' ng-model="newComment"></textarea>
+
+  <button type="button" ng-click="postComment(currentUser._id, wod._id, newComment)" name="button">Submit</button>
+</div>
+<div ng-hide='custom'>
+  <textarea id='customComment' placeholder='time' ng-model="storeWod"></textarea>
+
+  <button type="button" ng-click="addCurrentWod(currentUser._id, wod._id, storeWod)" name="button">Submit</button>
+
+</div>
+
+<div  ng-repeat='stuff in wod.comments track by $index'>
+  {{stuff.comment}}: {{stuff.user.username}}
+</div>
 
 </ion-modal-view>
+</ion-content>
