--- a/www/views/navBar.html
+++ b/www/views/navBar.html
@@ -2,9 +2,9 @@
   <div class="navi" id="navi">
 
     <ul>
-      <li ng-click="goNav = !goNav" ng-click="showAll()"><a>  BOXWOD </a><img src="./img/hamburger.png"/></li>
-      <li ng-show="goNav"><a ui-sref="wod">WOD</a></li>
-      <li ng-show="goNav"><a ui-sref="home">Home</a></li>
-      <li ng-show="goNav"> <a ui-sref="user">Profile</a></li>
+      <li ng-click="togNav()"><a>  BOXWOD </a><img src="./img/hamburger.png"/></li>
+      <li ng-click="togNav()" ng-hide="goNav"><a ui-sref="wod">WOD</a></li>
+      <li ng-click="togNav()" ng-hide="goNav"><a ui-sref="home">Home</a></li>
+      <li ng-click="togNav()" ng-hide="goNav"> <a ui-sref="user">Profile</a></li>
     </ul>
   </div>
